--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "src/assets/js/scripts.js"
             ]
           },
           "configurations": {
