Khoa test bootstrap-datatable

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "bootstrap": "^5.3.3",
+    "bootstrap-table": "^1.23.5",
     "chart.js": "^4.4.4",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
@@ -30,7 +32,9 @@
     "@angular-devkit/build-angular": "^18.2.4",
     "@angular/cli": "^18.2.4",
     "@angular/compiler-cli": "^18.2.0",
+    "@types/bootstrap-table": "^1.11.5",
     "@types/jasmine": "~5.1.0",
+    "@types/jquery": "^3.5.31",
     "jasmine-core": "~5.2.0",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "~3.2.0",
