--- a/angular.json
+++ b/angular.json
@@ -27,10 +27,14 @@
             "styles": [
               "src/custom-theme.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap-table/dist/bootstrap-table.min.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap-table/dist/bootstrap-table.min.js",
+              "node_modules/bootstrap-table/dist/locale/bootstrap-table-vi-VN.min.js",
               "src/assets/js/scripts.js"
             ]
           },
