--- a/angular.json
+++ b/angular.json
@@ -25,16 +25,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/custom-theme.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
-              "node_modules/bootstrap-table/dist/bootstrap-table.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-              "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap-table/dist/bootstrap-table.min.js",
-              "node_modules/bootstrap-table/dist/locale/bootstrap-table-vi-VN.min.js",
               "src/assets/js/scripts.js"
             ]
           },
