--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
     "ngx-cookie-service": "^18.0.0",
+    "ngx-pagination": "^6.0.3",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
