--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@paypal/paypal-js": "^8.1.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
     "ngx-cookie-service": "^18.0.0",
